* gc.c (internal_object_p): Now a singleton classes appear by   ObjectSpace.each_object. [Bug #11360] * test/ruby/test_objectspace.rb: add a test about it.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@51320 b2dd03c8-39d4-4d8f-98ff-823fe69b080e